--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 
       <div class="col" id="content">
 
-        <!-- <h1>slider</h1>
         <h1>slider</h1>
         <h1>slider</h1>
         <h1>slider</h1>
@@ -80,7 +79,8 @@
         <h1>slider</h1>
         <h1>slider</h1>
         <h1>slider</h1>
-        <h1>slider</h1> -->
+        <h1>slider</h1>
+        <h1>slider</h1>
 
       </div>
 
